# file-sharing

./: Cargo.toml  DEPLOY.md  Dockerfile  docker-compose.yml  nginx.conf
src/: main.rs
static/: index.html
